canvas: Flush GrContext at regular intervals during draw.

When drawing to an SkCanvas backed by a GrContext, skia internally
batches the GrOps which may be flushed only at the end of the canvas
draw. This results in inefficient parallelization with the GPU, since
these ops are not transferred via the CommandBuffer until the GrContext
is flushed, and it can quickly exceed the command buffer capacity which
results in synchronously waiting on the GPU before more commands can
be issued.

This change adds a setting to SkiaPaintCanvas for accelerated Canvas2D
that flushes the GrContext after a fixed number of draw calls have been
made to the SkCanvas.

R=piman@chromium.org

Bug: 809441
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Id85fc2a91db07b51b72d903117b68d8c4db14693
Reviewed-on: https://chromium-review.googlesource.com/907867
Commit-Queue: Khushal <khushalsagar@chromium.org>
Reviewed-by: Justin Novosad <junov@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#536820}
Former-commit-id: 058b1a95f1d7b5cd89fa106746ee01c5250ff562