cc/paint/skia_paint_canvas.cc
@@ -12,15 +12,22 @@
 #include "third_party/skia/include/core/SkColorSpaceXformCanvas.h"
 #include "third_party/skia/include/core/SkMetaData.h"
 #include "third_party/skia/include/core/SkRegion.h"
+#include "third_party/skia/include/gpu/GrContext.h"
 #include "third_party/skia/include/utils/SkNWayCanvas.h"
 
 namespace cc {
 
 const bool SkiaPaintCanvas::kCreateSkiaShaders = true;
 
+SkiaPaintCanvas::ContextFlushes::ContextFlushes()
+    : enable(false), max_draws_before_flush(-1) {}
+
 SkiaPaintCanvas::SkiaPaintCanvas(SkCanvas* canvas,
-                                 ImageProvider* image_provider)
-    : canvas_(canvas), image_provider_(image_provider) {}
+                                 ImageProvider* image_provider,
+                                 ContextFlushes context_flushes)
+    : canvas_(canvas),
+      image_provider_(image_provider),
+      context_flushes_(context_flushes) {}
 
 SkiaPaintCanvas::SkiaPaintCanvas(const SkBitmap& bitmap)
     : canvas_(new SkCanvas(bitmap)), owned_(canvas_) {}
@@ -31,8 +38,11 @@ SkiaPaintCanvas::SkiaPaintCanvas(const SkBitmap& bitmap,
 
 SkiaPaintCanvas::SkiaPaintCanvas(SkCanvas* canvas,
                                  sk_sp<SkColorSpace> target_color_space,
-                                 ImageProvider* image_provider)
-    : canvas_(canvas), image_provider_(image_provider) {
+                                 ImageProvider* image_provider,
+                                 ContextFlushes context_flushes)
+    : canvas_(canvas),
+      image_provider_(image_provider),
+      context_flushes_(context_flushes) {
   WrapCanvasInColorSpaceXformCanvas(target_color_space);
 }
 
@@ -169,6 +179,7 @@ void SkiaPaintCanvas::drawLine(SkScalar x0,
   SkPaint paint = raster_flags.flags()->ToSkPaint();
 
   SkiaPaintCanvas::canvas_->drawLine(x0, y0, x1, y1, paint);
+  FlushAfterDrawIfNeeded();
 }
 
 void SkiaPaintCanvas::drawRect(const SkRect& rect, const PaintFlags& flags) {
@@ -180,6 +191,7 @@ void SkiaPaintCanvas::drawRect(const SkRect& rect, const PaintFlags& flags) {
   SkPaint paint = raster_flags.flags()->ToSkPaint();
 
   canvas_->drawRect(rect, paint);
+  FlushAfterDrawIfNeeded();
 }
 
 void SkiaPaintCanvas::drawIRect(const SkIRect& rect, const PaintFlags& flags) {
@@ -191,6 +203,7 @@ void SkiaPaintCanvas::drawIRect(const SkIRect& rect, const PaintFlags& flags) {
   SkPaint paint = raster_flags.flags()->ToSkPaint();
 
   canvas_->drawIRect(rect, paint);
+  FlushAfterDrawIfNeeded();
 }
 
 void SkiaPaintCanvas::drawOval(const SkRect& oval, const PaintFlags& flags) {
@@ -202,6 +215,7 @@ void SkiaPaintCanvas::drawOval(const SkRect& oval, const PaintFlags& flags) {
   SkPaint paint = raster_flags.flags()->ToSkPaint();
 
   canvas_->drawOval(oval, paint);
+  FlushAfterDrawIfNeeded();
 }
 
 void SkiaPaintCanvas::drawRRect(const SkRRect& rrect, const PaintFlags& flags) {
@@ -213,6 +227,7 @@ void SkiaPaintCanvas::drawRRect(const SkRRect& rrect, const PaintFlags& flags) {
   SkPaint paint = raster_flags.flags()->ToSkPaint();
 
   canvas_->drawRRect(rrect, paint);
+  FlushAfterDrawIfNeeded();
 }
 
 void SkiaPaintCanvas::drawDRRect(const SkRRect& outer,
@@ -226,6 +241,7 @@ void SkiaPaintCanvas::drawDRRect(const SkRRect& outer,
   SkPaint paint = raster_flags.flags()->ToSkPaint();
 
   canvas_->drawDRRect(outer, inner, paint);
+  FlushAfterDrawIfNeeded();
 }
 
 void SkiaPaintCanvas::drawRoundRect(const SkRect& rect,
@@ -240,6 +256,7 @@ void SkiaPaintCanvas::drawRoundRect(const SkRect& rect,
   SkPaint paint = raster_flags.flags()->ToSkPaint();
 
   canvas_->drawRoundRect(rect, rx, ry, paint);
+  FlushAfterDrawIfNeeded();
 }
 
 void SkiaPaintCanvas::drawPath(const SkPath& path, const PaintFlags& flags) {
@@ -251,6 +268,7 @@ void SkiaPaintCanvas::drawPath(const SkPath& path, const PaintFlags& flags) {
   SkPaint paint = raster_flags.flags()->ToSkPaint();
 
   canvas_->drawPath(path, paint);
+  FlushAfterDrawIfNeeded();
 }
 
 void SkiaPaintCanvas::drawImage(const PaintImage& image,
@@ -269,6 +287,7 @@ void SkiaPaintCanvas::drawImage(const PaintImage& image,
   PlaybackParams params(image_provider_, canvas_->getTotalMatrix());
   DrawImageOp draw_image_op(image, left, top, nullptr);
   DrawImageOp::RasterWithFlags(&draw_image_op, raster_flags, canvas_, params);
+  FlushAfterDrawIfNeeded();
 }
 
 void SkiaPaintCanvas::drawImageRect(const PaintImage& image,
@@ -289,6 +308,7 @@ void SkiaPaintCanvas::drawImageRect(const PaintImage& image,
   DrawImageRectOp draw_image_rect_op(image, src, dst, flags, constraint);
   DrawImageRectOp::RasterWithFlags(&draw_image_rect_op, raster_flags, canvas_,
                                    params);
+  FlushAfterDrawIfNeeded();
 }
 
 void SkiaPaintCanvas::drawBitmap(const SkBitmap& bitmap,
@@ -306,6 +326,7 @@ void SkiaPaintCanvas::drawBitmap(const SkBitmap& bitmap,
   } else {
     canvas_->drawBitmap(bitmap, left, top, nullptr);
   }
+  FlushAfterDrawIfNeeded();
 }
 
 void SkiaPaintCanvas::drawTextBlob(scoped_refptr<PaintTextBlob> blob,
@@ -319,10 +340,18 @@ void SkiaPaintCanvas::drawTextBlob(scoped_refptr<PaintTextBlob> blob,
     return;
   SkPaint paint = raster_flags.flags()->ToSkPaint();
   canvas_->drawTextBlob(blob->ToSkTextBlob(), x, y, paint);
+  FlushAfterDrawIfNeeded();
 }
 
 void SkiaPaintCanvas::drawPicture(sk_sp<const PaintRecord> record) {
-  PlaybackParams params(image_provider_, canvas_->getTotalMatrix());
+  auto did_draw_op_cb =
+      context_flushes_.enable
+          ? base::BindRepeating(&SkiaPaintCanvas::FlushAfterDrawIfNeeded,
+                                base::Unretained(this))
+          : PlaybackParams::DidDrawOpCallback();
+  PlaybackParams params(image_provider_, canvas_->getTotalMatrix(),
+                        PlaybackParams::CustomDataRasterCallback(),
+                        did_draw_op_cb);
   record->Playback(canvas_, params);
 }
 
@@ -356,9 +385,18 @@ void SkiaPaintCanvas::Annotate(AnnotationType type,
   }
 }
 
-void SkiaPaintCanvas::drawPicture(sk_sp<const PaintRecord> record,
-                                  const PlaybackParams& params) {
-  record->Playback(canvas_, params);
+void SkiaPaintCanvas::FlushAfterDrawIfNeeded() {
+  if (!context_flushes_.enable)
+    return;
+
+  if (++num_of_ops_ > context_flushes_.max_draws_before_flush) {
+    num_of_ops_ = 0;
+    if (auto* context = canvas_->getGrContext()) {
+      TRACE_EVENT0("cc",
+                   "SkiaPaintCanvas::FlushAfterDrawIfNeeded::FlushGrContext");
+      context->flush();
+    }
+  }
 }
 
 }  // namespace cc
